[tool.poetry]
name = "update-venvs"
version = "0.1.0"
description = ""
authors = ["Tarcísio Eduardo Moreira Crocomo <tarcisioe@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
tomlkit = "^0.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
